RESOLVED FIXED Bug 208199
REGRESSION (r256882): Can't drag an HTML file into a new (empty) Safari tab
https://bugs.webkit.org/show_bug.cgi?id=208199
Summary REGRESSION (r256882): Can't drag an HTML file into a new (empty) Safari tab
Chris Dumez
Reported 2020-02-25 08:48:23 PST
Can't drag an HTML file into a new (empty) Safari tab since r256882.
Attachments
Patch (1.48 KB, patch)
2020-02-25 08:59 PST, Chris Dumez
no flags
Patch (4.01 KB, patch)
2020-02-25 10:01 PST, Chris Dumez
no flags
Patch (4.02 KB, patch)
2020-02-25 10:07 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-02-25 08:48:36 PST
Chris Dumez
Comment 2 2020-02-25 08:59:19 PST
Chris Dumez
Comment 3 2020-02-25 10:01:51 PST
Chris Dumez
Comment 4 2020-02-25 10:07:34 PST
WebKit Commit Bot
Comment 5 2020-02-25 11:07:54 PST
The commit-queue encountered the following flaky tests while processing attachment 391666 [details]: editing/spelling/spellcheck-input-search-crash.html bug 207995 (authors: arv@chromium.org, g.czajkowski@samsung.com, mark.lam@apple.com, and morrita@google.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6 2020-02-25 11:08:32 PST
Comment on attachment 391666 [details] Patch Clearing flags on attachment: 391666 Committed r257364: <https://trac.webkit.org/changeset/257364>
WebKit Commit Bot
Comment 7 2020-02-25 11:08:34 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 8 2020-02-25 16:53:03 PST
The API test added with this test is timing out on iOS bots, as reported by EWS: https://ews-build.webkit.org/#/builders/9/builds/18214
Note You need to log in before you can comment on or make changes to this bug.