REGRESSION (r256882): Can't drag an HTML file into a new (empty) Safari tab https://bugs.webkit.org/show_bug.cgi?id=208199 <rdar://problem/59746887>

Reviewed by Alex Christensen.

Source/WebKit:

Make sure we launch the initial WKWebView's WebProcess when a drag enters the view, so that the drag & drop
logic still works on empty views.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::dragEntered):

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/DragAndDropTests.mm:
(TEST):


Canonical link: https://commits.webkit.org/221137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257364 268f45cc-cd09-0410-ab3c-d52691b4dbfc